<resources>
    <string name="app_name">Codéx RPG</string>
    <string name="rpg">Codéx RPG</string>
    <string name="codex">Codéx</string>
    <string name="rpg_login">rpg</string>
    <string name="app_name_rpg_2_title">Códex\nRPG</string>
    <string name="Email">email</string>
    <string name="Senha">senha</string>
    <string name="Fortgot_Password">Esqueci minha senha</string>
    <string name="Connect">Conectar</string>
    <string name="Nome_Completo">Nome Completo</string>
    <string name="Role">Role: </string>
    <string name="nickname">nickname</string>
    <string name="Confirmar_Senha">Confirmar Senha</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Cadastrado">Email Cadastrado</string>
    <string name="Home">Home</string>
    <string name="Map">Map</string>
    <string name="Profile">Meu perfil</string>
    <string name="Card">Card</string>
    <string name="Login">Login</string>
    <string name="Enviar">enviar</string>
    <string name="settings">Configurações</string>
    <string name="letters">Letters</string>
    <string name="audio">Audio</string>
    <string name="Exit">Sair</string>
    <string name="notifications">Notificações</string>
    <string name="language">idioma</string>
    <string name="Exit_account">Encerre sua Conta</string>
    <string name="Portuguese">Português</string>
    <string name="sentence">Ainda não é um aventureiro?</string>
    <string name="register">Cadastre-se</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_Account">Deseja encerrar sua conta?</string>
    <string name="encerrar_conta">Encerrar Conta</string>
    <string name="encerrar">Encerrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="fechar">Fechar</string>
    <string name="insira_seu_endere_o_de_email_para_receber_instru_es_para_redefinir_sua_senha">Insira seu endereço de email para receber instruções para redefinir sua senha</string>
    <string name="lembrou_sua_senha">Lembrou sua senha?</string>
    <string name="reinos_perdidos">Reinos Perdidos</string>
    <string name="insira_o_token_enviado_para_o_seu_email"> Insira o token enviado para o seu email </string>
    <string name="verificar"> Verificar </string>
    <string name="trocar_senha"> Trocar Senha</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="pelo_menos_8_caracteres">• Pelo menos 8 caracteres</string>
    <string name="pelo_menos_1_letra_mai_scula">• Pelo menos 1 letra maiúscula</string>
    <string name="pelo_menos_1_n_mero">• Pelo menos 1 número</string>
    <string name="pelo_menos_1_caractere_especial">• Pelo menos 1 caractere especial</string>
    <string name="notificações">Notificações</string>
    <string name="Configurações">Configurações</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="search_hint">Pesquisar</string>
    <string name="jogadores_online">Jogadores Online</string>
    <string name="convidar">Convidar</string>
    <string name="nome_do_jogador">Nome do Jogador</string>
    <string name="icone_jogador">Icone Jogador</string>
    <string name="Perfil">Perfil</string>
    <string name="Genêro">Genêro</string>
    <string name="nova_senha_de_acesso">Criar nova senha de acesso</string>
    <string name="sua_senha">Sua senha precisa ter: </string>
    <string name="verificando">Verificando</string>
    <string name="cadastro"> Cadastro </string>
    <string name="Termos_Privacidade">Termos e Privacidade</string>
    <string name="Som">Som</string>
    <string name="Musica">Musica</string>
    <string name="content_desc_avatar">Avatar do usuário</string>
    <string name="editar">Editar</string>
    <string name="nivel">Nível</string>
    <string name="partidas">Partidas</string>
    <string name="amigos">Amigos</string>
    <string name="tema_escuro">Tema escuro</string>
    <string name="notificacoes">Notificações</string>
    <string name="sons">Sons</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="dice">Dados</string>
    <string name="confirmação">Deseja sair do Jogo?</string>
    <string name="chat">Chat</string>
    <string name="escreva">Mensagem</string>
    <string name="add_note">Adicionar Nota</string>
    <string name="alterar_foto">Alterar Foto</string>
    <string name="bem_vindo">
        Bem-vindo ao <font color='#D9921F'><b><big>Codéx RPG</big></b></font>!
    </string>
    <string name="pan">Pan</string>
    <string name="pen">Pen</string>
    <string name="line">Linha</string>
    <string name="rect">Retângulo</string>
    <string name="circle">Círculo</string>
    <string name="text">Texto</string>
    <string name="eraser">Apagar</string>
    <string name="undo">Refazer</string>
    <string name="redo">Fazer</string>
    <string name="palete">Palete</string>
    <string name="limite_500_caracteres">Até 500 caracteres</string>
    <string name="escreva_sua_nota">Escreva sua nota</string>
    <string name="notas">NOTAS</string>
    <string name="titulo_notas">Título</string>
    <string name="conteudo_nota">Conteúdo da nota…</string>
    <string name="titulo">titulo</string>
    <string name="excluir">excluir</string>
    <string name="apagar">Apagar</string>
    <string name="exit_session">Sair</string>
    <string name="confirm_exit">Deseja encerrar a sessão?</string>
    <string name="opções">Opções</string>
    <string name="biografia">BIOGRAFIA</string>
    <string name="Personagem">Personagem</string>
    <string name="arma">ARMAMENTO</string>
    <string name="poder">PODERES</string>
    <string name="magia">MAGIAS</string>
    <string name="habilidade">Habilidades</string>
    <string name="mochila">Mochila</string>
    <string name="cartas">Cartas</string>
    <string name="descricao">Descricao</string>
    <string name="mapa">Mapas</string>
    <string name="preview">Preview</string>
    <string name="novo_mapa">Novo Mapa</string>
    <string name="renomear_mapa">Renomear Mapa</string>
    <string name="nome_do_mapa">Nome do Mapa</string>
    <string name="nome_obrigatorio">Nome obrigatório</string>
    <string name="nenhuma_alteracao">Nenhuma alteração</string>
    <string name="desmarque_para_excluir">Desmarque para Excluir</string>
    <string name="desmarque_para_editar">Desmarque para Editar</string>
    <string name="desmarque_para_visualizar">Desmarque para visualizar</string>
    <string name="criar_perssonagem">Criar Personagem</string>
    <string name="selecione_personagem">Selecione seu personagem</string>
    <string name="selecione_armamento">Selecione seu armamento</string>
    <string name="selecione_poder">Selecione seu poder</string>
    <string name="selecione_magia">Selecione sua magia</string>
    <string name="selecione_mochila">Selecione seus itens</string>
    <string name="proximo">Proximo</string>
    <string name="anterior">Anterior</string>
    <string name="subtitulo_nova_carta">Se prepare para a batalha</string>
    <string name="confirmar">Confirmar</string>
    <string name="voltar">Voltar</string>
    <string name="iniciar_sessão">Iniciar sessão</string>
    <string name="confirm_message_rpg_destino">Forja teu destino, aventureiro. Confirmar a jornada?</string>
    <string name="confirm_message_rpg_dados">Que os dados rolem a teu favor. Confirmar a ação?</string>
    <string name="confirm_message_rpg_portal">O portal pulsa energia — atravessar agora?</string>
    <string name="confirmar_message_oraculo">Os oráculos aguardam teu sinal. Desejas prosseguir?</string>
    <string name="confirmar_messag_feitiço">Feitiço pronto. Lançar agora?</string>
    <string name="confirmar_message_lamina">A lâmina está afiada e o mapa traçado. Confirmar a missão?</string>
    <string name="nada_encontrado">Não encontramos nenhum jogo!</string>
    <string name="mestre">Mestre</string>
    <string name="numero_de_jogadores">Players</string>
    <string name="editar_jogo">Editar Jogo</string>
    <string name="senha_opcional">Senha Opcional</string>
    <string name="atualizar">atualizar</string>
    <string name="ativo">ativo</string>
    <string name="selecione_um_mapa">Selecione um mapa</string>
    <string name="nome_personagem">Nome Personagem</string>
    <string name="comecar">Começar</string>
    <string name="atributos">Atributos</string>
    <string name="forca">Força</string>
    <string name="destreza">Destreza</string>
    <string name="sabedoria">Sabedoria</string>
    <string name="constituicao">Constituicao</string>
    <string name="inteligencia">Inteligência</string>
    <string name="carisma">Carisma</string>
    <string name="pv_pm">Pontos de Vida e Mana</string>
    <string name="pv">pv</string>
    <string name="pv_max">pv_max</string>
    <string name="pv_temp">pv_temp</string>
    <string name="pm">pm</string>
    <string name="pm_max">pm_max</string>
    <string name="pm_temp">pm_temp</string>
    <string name="personagem">Personagem</string>
    <string name="trocar_imagem">Trocar Imagem</string>
    <string name="seu_personagem">Seu Personagem</string>
    <string name="classe">Classe</string>
    <string name="raça">Raça</string>
    <string name="divindade">Divindade</string>
    <string name="origem">Origem</string>
    <string name="riqueza">Riqueza</string>
    <string name="Tamanho">Tamanho</string>
    <string name="selecione_as_imagens">Selecione seus Cards para Batalha!</string>
    <string name="escolha_uma_carta">Escolha uma carta</string>
    <string name="selecionado">Selecionado</string>
    <string name="escolha_poderes">Escolha seus poderes</string>
    <string name="selecionar">Selecionar</string>
    <string name="escolha_magias">Escolha suas magias</string>
    <string name="tipo_de_poder">Selecione seu tipo de Poder</string>
    <string name="sem_tipos_disponiveis">Sem Tipos disponiveis</string>
    <string name="selecione_um_tipo">Selecione um tipo</string>
    <string name="salvando">Salvando</string>
    <string name="poder_adicionado_ao_deck">Poder adicionado ao deck</string>
    <string name="tipo_poder_nome">Tipo Poder Nome</string>
    <string name="sucesso">Sucesso</string>
    <string name="escolha_armas">Escolha suas armas</string>
    <string name="tipo_de_arma">Selecione seu tipo de arma: </string>
    <string name="id_do_jogo">ID JOGO</string>
    <string name="player_icon">player_icon</string>
    <string name="jogadores_na_mesa">Jogadores na mesa</string>
    <string name="dano">Dano</string>
    <string name="critico">Critico</string>
    <string name="margem_ameaca">Margem de Ameaça</string>
    <string name="multiplicador_critico">Multiplicador Critico</string>
    <string name="alcance">Alcance</string>
    <string name="espacos">Espaços</string>
    <string name="preco">Preço</string>
    <string name="atributo">Atributo</string>
    <string name="selecione_seu_tipo_de_dano">Selecione seu tipo de dano: </string>
    <string name="duracao">Duração</string>
    <string name="alvo_area">Alvo Area</string>
    <string name="custo">Custo</string>
    <string name="circulo">Circulo</string>
    <string name="tipo_magia">Tipo Magia: </string>
    <string name="escola_magia">Escola Magia: </string>
    <string name="execucao">Execução Magia: </string>
    <string name="resistencia">Resistência: </string>
    <string name="erro_dados_invalidos">Erro Dados Inválidos</string>
    <string name="player_id_nao_definido">Player ID não definido</string>
    <string name="selecione_seu_tipo_de_poder">Selecione seu Tipo de Poder</string>
    <string name="selecione_uma_escola">Selecione uma escola</string>
    <string name="selecione_uma_execucao">Selecione uma execução</string>
    <string name="selecione_uma_resistencia">Selecione uma resistencia</string>
</resources>