<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context=".Activitylogin">
    
    
<androidx.cardview.widget.CardView
    android:layout_width=""
    android:layout_height=""
    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="458dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rpg"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/Email"
            android:padding="8dp"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:hint="@string/Senha"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="335dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/Connect"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/BackLoginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/Fortgot_Password"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:cornerRadius="20dp" />

    </LinearLayout>


</LinearLayout>
